--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconscout/react-unicons": "^2.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "jwt-decode": "^4.0.0",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "sonner": "^1.2.4",
+    "tailwindcss": "^3.4.0",
     "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
