--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.7.2",
     "jwt-decode": "^4.0.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
@@ -20,6 +21,8 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "sonner": "^1.2.4",
+    "styled-components": "^6.1.8",
+    "swiper": "^11.0.5",
     "tailwindcss": "^3.4.0",
     "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
