--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "proxy": "https://api.themoviedb.org",
   "private": true,
   "dependencies": {
     "@iconscout/react-unicons": "^2.0.2",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "sonner": "^1.2.4",
