--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.2.4",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
