--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.6",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
