--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
